Fix text alignment

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,14 @@
 // New to Stylus? Check out http://learnboost.github.io/stylus
 // Use modern CSS thanks to Autoprefixer: https://github.com/ai/autoprefixer
 
+.deck
+  text-align center
+
+pre
+  text-align left
+
+// Base styles
+
 @import 'normalizecss/normalize.css'
 // Style using Bespoke Classes: https://github.com/markdalgleish/bespoke-classes
 
